--- a/working-example/docker-compose.yml
+++ b/working-example/docker-compose.yml
@@ -61,7 +61,9 @@ services:
     restart: always
     image: postgres:10.5-alpine
     environment:
-      PGDATA: /var/lib/postgresql/data
+      # Must set to non-default directory
+      # See: https://github.com/docker-library/postgres/issues/404
+      PGDATA: /var/lib/postgresql/local_data
       POSTGRES_DB: api_db
       POSTGRES_USER: api_user
       POSTGRES_PASSWORD: api_password
@@ -69,7 +71,7 @@ services:
       - api_db
     volumes:
       # Mount all database files locally
-      - ./api_db/postgresql/data:/var/lib/postgresql/data
+      - ./api_db/postgresql:/var/lib/postgresql
 networks:
   webapps:
     # All containers on the same named network can talk to one another
