migrate app to app1 and begin app2

--- a/working-example/nginx/nginx.conf
+++ b/working-example/nginx/nginx.conf
@@ -25,7 +25,7 @@ http {
     location / {
       # By setting a target variable, nginx can run without all of the services
       # up. This is nice for development
-      set $target "http://app:34341"; # app is resolved via docker's dns server
+      set $target "http://app1:34341"; # app is resolved via docker's dns server
       proxy_pass $target;
     }
   }
@@ -42,12 +42,17 @@ http {
     proxy_set_header X-Forwarded-Host $server_name;
 
     location /api {
-      set $target "http://api:3000";
+      set $target "http://api:5000";
       proxy_pass $target;
     }
 
-    location /app {
-      set $target "http://app:8080";
+    location /app1 {
+      set $target "http://app1:8080";
+      proxy_pass $target;
+    }
+
+    location /app2 {
+      set $target "http://app2:3000";
       proxy_pass $target;
     }
   }
