--- a/working-example/docker-compose.yml
+++ b/working-example/docker-compose.yml
@@ -10,24 +10,29 @@ services:
       - webapps
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-  app:
+  app1:
     restart: always
     build:
-      context: ./app
+      context: ./app1
       target: development
     networks:
       - webapps
     volumes:
-      - ./app/package.json:/home/node/app/package.json
-      - ./app/yarn.lock:/home/node/app/yarn.lock
-      - ./app/webpack.config.js:/home/node/app/webpack.config.js
-      - ./app/.babelrc:/home/node/app/.babelrc
-      - ./app/serve.config.js:/home/node/app/serve.config.js
-      - ./app/src:/home/node/app/src
-      - ./app/index.ejs:/home/node/app/index.ejs
+      - ./app1:/home/node/app
+      - /home/node/app/node_modules/
     depends_on:
       - nginx
       - api
+  app2:
+    restart: always
+    build:
+      context: ./app2
+      target: development
+    networks:
+      - webapps
+    volumes:
+      - ./app2:/home/node/app
+      - /home/node/app/node_modules/
   api:
     restart: always
     build:
@@ -43,17 +48,8 @@ services:
       - webapps
       - api_db
     volumes:
-      # Package management
-      - ./api/package.json:/home/node/api/package.json
-      - ./api/yarn.lock:/home/node/api/yarn.lock
-      # Express app
-      - ./api/app:/home/node/api/app
-      - ./api/index.js:/home/node/api/index.js
-      # Sequelize files
-      - ./api/config:/home/node/api/config
-      - ./api/migrations:/home/node/api/migrations
-      - ./api/models:/home/node/api/models
-      - ./api/seeders:/home/node/api/seeders
+      - ./api:/home/node/api
+      - /home/node/api/node_modules
     depends_on:
       - nginx
       - api_db
