--- a/working-example/nginx/nginx.conf
+++ b/working-example/nginx/nginx.conf
@@ -31,6 +31,24 @@ http {
   }
 
   server {
+    listen 5001;
+    server_name localhost;
+
+    #proxy_cache_bypass $http_upgrade;
+    #proxy_set_header X-Forwarded-For $remote_addr:$remote_port;
+    #proxy_set_header X-Forwarded-Host $remote_addr;
+    #proxy_set_header X-Forwarded-Port $remote_port;
+
+    location /wps {
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+      set $target "http://app3:5001"; # app is resolved via docker's dns server
+      proxy_pass $target;
+    }
+  }
+
+  server {
     listen 80;
     server_name localhost;
 
@@ -53,6 +71,11 @@ http {
 
     location /app2 {
       set $target "http://app2:3000";
+      proxy_pass $target;
+    }
+
+    location /app3 {
+      set $target "http://app3:5001";
       proxy_pass $target;
     }
   }
